# L4_load_balancer

./: .gitignore  LB  README.md  chat_clnt.c  chat_serv  chat_serv.c  clnt  docker-compose.cpp.yml  docker-compose.go.yml  loadbalacner  loadbalancer  loadbalancerLobin  loadbalancerLobin.cpp  loadbalancerLobin.hpp  sendtoclient.cpp  sendtoserver.cpp
cpp/: CMakeLists.txt  Dockerfile  Makefile  analyzePkt.cpp  entrypoint.sh  healthCheck.cpp  loadbalancerLobin  loadbalancerLobin.cpp  loadbalancerLobin.hpp  sendtoclient.cpp  sendtoserver.cpp  struct.hpp
cpp/app/: CMakeLists.txt  main.cpp
cpp/include/: analyzePkt.h  globalVariable.h  healthCheck.h  loadbalancerLobin.h  send.h  struct.h
cpp/lib/: CMakeLists.txt  analyzePkt.cpp  globalVariable.cpp  healthCheck.cpp  loadbalancerLobin.cpp  sendtoclient.cpp  sendtoserver.cpp
cpp/tests/: CMakeLists.txt  test.cpp
go/: Dockerfile  Makefile  lb.go
lb-golang/: lb.go
shared/: Dockerfile  Makefile  chat_clnt  chat_serv  chat_serv.c
shared/client/: Dockerfile  chat_clnt.c
